Meta2/y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionDefinition FunctionsAndDeclarations
    6                         | FunctionDeclaration FunctionsAndDeclarations
    7                         | Declaration FunctionsAndDeclarations

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE RBRACE
   10             | LBRACE DeclarationsAndStatements RBRACE

   11 DeclarationsAndStatements: Statement DeclarationsAndStatements
   12                          | Declaration DeclarationsAndStatements
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration ParameterDeclaration_

   18 ParameterDeclaration_: ParameterDeclaration_ COMMA ParameterDeclaration
   19                      | empty

   20 ParameterDeclaration: TypeSpec
   21                     | TypeSpec ID

   22 Declaration: TypeSpec Declarator Declarator_ SEMI
   23            | error SEMI

   24 Declarator_: Declarator_ COMMA Declarator
   25            | empty

   26 Declarator: ID ASSIGN AssignExpr
   27           | ID

   28 TypeSpec: CHAR
   29         | INT
   30         | VOID
   31         | SHORT
   32         | DOUBLE

   33 StatementError: error SEMI
   34               | Statement

   35 Statement: Compound_Stm
   36          | Expr_Stm
   37          | Select_Stm
   38          | Iter_Stm
   39          | Jump_Stm

   40 Compound_Stm: LBRACE RBRACE
   41             | LBRACE BlockItemStm RBRACE
   42             | LBRACE error RBRACE

   43 BlockItemStm: StatementError BlockItemStm
   44             | StatementError

   45 Expr_Stm: OptionalExpr SEMI

   46 OptionalExpr: empty
   47             | Expr

   48 Select_Stm: IF LPAR Expr RPAR StatementError
   49           | IF LPAR Expr RPAR StatementError ELSE StatementError

   50 Iter_Stm: WHILE LPAR Expr RPAR StatementError

   51 Jump_Stm: RETURN OptionalExpr SEMI

   52 PrimaryExpr: ID
   53            | INTLIT
   54            | CHRLIT
   55            | REALLIT
   56            | LPAR Expr RPAR
   57            | LPAR error RPAR

   58 ArgExpr: AssignExpr
   59        | ArgExpr COMMA AssignExpr

   60 FunctionCallExpr: PrimaryExpr
   61                 | ID LPAR ArgExpr RPAR
   62                 | ID LPAR RPAR
   63                 | ID LPAR error RPAR

   64 UnaryExpr: FunctionCallExpr
   65          | PLUS UnaryExpr
   66          | MINUS UnaryExpr
   67          | NOT UnaryExpr

   68 MultiplicativeExpr: UnaryExpr
   69                   | MultiplicativeExpr MUL UnaryExpr
   70                   | MultiplicativeExpr DIV UnaryExpr
   71                   | MultiplicativeExpr MOD UnaryExpr

   72 AdditiveExpr: MultiplicativeExpr
   73             | AdditiveExpr PLUS MultiplicativeExpr
   74             | AdditiveExpr MINUS MultiplicativeExpr

   75 RelationalExpr: AdditiveExpr
   76               | RelationalExpr LT AdditiveExpr
   77               | RelationalExpr GT AdditiveExpr
   78               | RelationalExpr LE AdditiveExpr
   79               | RelationalExpr GE AdditiveExpr

   80 EqualExpr: RelationalExpr
   81          | EqualExpr EQ RelationalExpr
   82          | EqualExpr NE RelationalExpr

   83 AndExpr: EqualExpr
   84        | AndExpr BITWISEAND EqualExpr

   85 ExclusiveOrExpr: AndExpr
   86                | ExclusiveOrExpr BITWISEXOR AndExpr

   87 InclusiveOrExpr: ExclusiveOrExpr
   88                | InclusiveOrExpr BITWISEOR ExclusiveOrExpr

   89 LogicalAndExpr: InclusiveOrExpr
   90               | LogicalAndExpr AND InclusiveOrExpr

   91 LogicalOrExpr: LogicalAndExpr
   92              | LogicalOrExpr OR LogicalAndExpr

   93 AssignExpr: LogicalOrExpr
   94           | LogicalOrExpr ASSIGN AssignExpr

   95 Expr: AssignExpr
   96     | Expr COMMA AssignExpr

   97 empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 23 33 42 57 63
CHAR (258) 28
ELSE (259) 49
WHILE (260) 50
IF (261) 48 49
INT (262) 29
SHORT (263) 31
DOUBLE (264) 32
RETURN (265) 51
VOID (266) 30
BITWISEAND (267) 84
BITWISEOR (268) 88
BITWISEXOR (269) 86
AND (270) 90
ASSIGN (271) 26 94
MUL (272) 69
COMMA (273) 18 24 59 96
DIV (274) 70
EQ (275) 81
GE (276) 79
GT (277) 77
LBRACE (278) 9 10 40 41 42
LE (279) 78
LPAR (280) 16 48 49 50 56 57 61 62 63
LT (281) 76
MINUS (282) 66 74
MOD (283) 71
NE (284) 82
NOT (285) 67
OR (286) 92
PLUS (287) 65 73
RBRACE (288) 9 10 40 41 42
RPAR (289) 16 48 49 50 56 57 61 62 63
SEMI (290) 15 22 23 33 45 51
ID (291) 16 21 26 27 52 61 62 63
CHRLIT (292) 54
REALLIT (293) 55
RESERVED (294)
INTLIT (295) 53
IFS (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
FunctionsAndDeclarations (44)
    on left: 2 3 4 5 6 7, on right: 1 5 6 7
FunctionDefinition (45)
    on left: 8, on right: 2 5
FunctionBody (46)
    on left: 9 10, on right: 8
DeclarationsAndStatements (47)
    on left: 11 12 13 14, on right: 10 11 12
FunctionDeclaration (48)
    on left: 15, on right: 3 6
FunctionDeclarator (49)
    on left: 16, on right: 8 15
ParameterList (50)
    on left: 17, on right: 16
ParameterDeclaration_ (51)
    on left: 18 19, on right: 17 18
ParameterDeclaration (52)
    on left: 20 21, on right: 17 18
Declaration (53)
    on left: 22 23, on right: 4 7 12 14
Declarator_ (54)
    on left: 24 25, on right: 22 24
Declarator (55)
    on left: 26 27, on right: 22 24
TypeSpec (56)
    on left: 28 29 30 31 32, on right: 8 15 20 21 22
StatementError (57)
    on left: 33 34, on right: 43 44 48 49 50
Statement (58)
    on left: 35 36 37 38 39, on right: 11 13 34
Compound_Stm (59)
    on left: 40 41 42, on right: 35
BlockItemStm (60)
    on left: 43 44, on right: 41 43
Expr_Stm (61)
    on left: 45, on right: 36
OptionalExpr (62)
    on left: 46 47, on right: 45 51
Select_Stm (63)
    on left: 48 49, on right: 37
Iter_Stm (64)
    on left: 50, on right: 38
Jump_Stm (65)
    on left: 51, on right: 39
PrimaryExpr (66)
    on left: 52 53 54 55 56 57, on right: 60
ArgExpr (67)
    on left: 58 59, on right: 59 61
FunctionCallExpr (68)
    on left: 60 61 62 63, on right: 64
UnaryExpr (69)
    on left: 64 65 66 67, on right: 65 66 67 68 69 70 71
MultiplicativeExpr (70)
    on left: 68 69 70 71, on right: 69 70 71 72 73 74
AdditiveExpr (71)
    on left: 72 73 74, on right: 73 74 75 76 77 78 79
RelationalExpr (72)
    on left: 75 76 77 78 79, on right: 76 77 78 79 80 81 82
EqualExpr (73)
    on left: 80 81 82, on right: 81 82 83 84
AndExpr (74)
    on left: 83 84, on right: 84 85 86
ExclusiveOrExpr (75)
    on left: 85 86, on right: 86 87 88
InclusiveOrExpr (76)
    on left: 87 88, on right: 88 89 90
LogicalAndExpr (77)
    on left: 89 90, on right: 90 91 92
LogicalOrExpr (78)
    on left: 91 92, on right: 92 93 94
AssignExpr (79)
    on left: 93 94, on right: 26 58 59 94 95 96
Expr (80)
    on left: 95 96, on right: 47 48 49 50 56 96
empty (81)
    on left: 97, on right: 19 25 46


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   23 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   28 TypeSpec: CHAR .

    $default  reduce using rule 28 (TypeSpec)


State 3

   29 TypeSpec: INT .

    $default  reduce using rule 29 (TypeSpec)


State 4

   31 TypeSpec: SHORT .

    $default  reduce using rule 31 (TypeSpec)


State 5

   32 TypeSpec: DOUBLE .

    $default  reduce using rule 32 (TypeSpec)


State 6

   30 TypeSpec: VOID .

    $default  reduce using rule 30 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .

    $default  reduce using rule 1 (Program)


State 9

    2 FunctionsAndDeclarations: FunctionDefinition .
    5                         | FunctionDefinition . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 2 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 15
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration .
    6                         | FunctionDeclaration . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 3 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 16
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 11

    4 FunctionsAndDeclarations: Declaration .
    7                         | Declaration . FunctionsAndDeclarations

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 4 (FunctionsAndDeclarations)

    FunctionsAndDeclarations  go to state 17
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 12

    8 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   22 Declaration: TypeSpec . Declarator Declarator_ SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarator          go to state 20


State 13

   23 Declaration: error SEMI .

    $default  reduce using rule 23 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    5 FunctionsAndDeclarations: FunctionDefinition FunctionsAndDeclarations .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionDeclaration FunctionsAndDeclarations .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations: Declaration FunctionsAndDeclarations .

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   26 Declarator: ID . ASSIGN AssignExpr
   27           | ID .

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 27 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 20

   22 Declaration: TypeSpec Declarator . Declarator_ SEMI

    $default  reduce using rule 97 (empty)

    Declarator_  go to state 26
    empty        go to state 27


State 21

   26 Declarator: ID ASSIGN . AssignExpr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    PrimaryExpr         go to state 36
    FunctionCallExpr    go to state 37
    UnaryExpr           go to state 38
    MultiplicativeExpr  go to state 39
    AdditiveExpr        go to state 40
    RelationalExpr      go to state 41
    EqualExpr           go to state 42
    AndExpr             go to state 43
    ExclusiveOrExpr     go to state 44
    InclusiveOrExpr     go to state 45
    LogicalAndExpr      go to state 46
    LogicalOrExpr       go to state 47
    AssignExpr          go to state 48


State 22

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 49
    ParameterDeclaration  go to state 50
    TypeSpec              go to state 51


State 23

    9 FunctionBody: LBRACE . RBRACE
   10             | LBRACE . DeclarationsAndStatements RBRACE

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 52
    IF       shift, and go to state 53
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 54
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 55
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 56
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    SEMI  reduce using rule 97 (empty)

    DeclarationsAndStatements  go to state 57
    Declaration                go to state 58
    TypeSpec                   go to state 59
    Statement                  go to state 60
    Compound_Stm               go to state 61
    Expr_Stm                   go to state 62
    OptionalExpr               go to state 63
    Select_Stm                 go to state 64
    Iter_Stm                   go to state 65
    Jump_Stm                   go to state 66
    PrimaryExpr                go to state 36
    FunctionCallExpr           go to state 37
    UnaryExpr                  go to state 38
    MultiplicativeExpr         go to state 39
    AdditiveExpr               go to state 40
    RelationalExpr             go to state 41
    EqualExpr                  go to state 42
    AndExpr                    go to state 43
    ExclusiveOrExpr            go to state 44
    InclusiveOrExpr            go to state 45
    LogicalAndExpr             go to state 46
    LogicalOrExpr              go to state 47
    AssignExpr                 go to state 67
    Expr                       go to state 68
    empty                      go to state 69


State 24

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 25

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 8 (FunctionDefinition)


State 26

   22 Declaration: TypeSpec Declarator Declarator_ . SEMI
   24 Declarator_: Declarator_ . COMMA Declarator

    COMMA  shift, and go to state 70
    SEMI   shift, and go to state 71


State 27

   25 Declarator_: empty .

    $default  reduce using rule 25 (Declarator_)


State 28

   56 PrimaryExpr: LPAR . Expr RPAR
   57            | LPAR . error RPAR

    error    shift, and go to state 72
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    PrimaryExpr         go to state 36
    FunctionCallExpr    go to state 37
    UnaryExpr           go to state 38
    MultiplicativeExpr  go to state 39
    AdditiveExpr        go to state 40
    RelationalExpr      go to state 41
    EqualExpr           go to state 42
    AndExpr             go to state 43
    ExclusiveOrExpr     go to state 44
    InclusiveOrExpr     go to state 45
    LogicalAndExpr      go to state 46
    LogicalOrExpr       go to state 47
    AssignExpr          go to state 67
    Expr                go to state 73


State 29

   66 UnaryExpr: MINUS . UnaryExpr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    PrimaryExpr       go to state 36
    FunctionCallExpr  go to state 37
    UnaryExpr         go to state 74


State 30

   67 UnaryExpr: NOT . UnaryExpr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    PrimaryExpr       go to state 36
    FunctionCallExpr  go to state 37
    UnaryExpr         go to state 75


State 31

   65 UnaryExpr: PLUS . UnaryExpr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    ID       shift, and go to state 32
    CHRLIT   shift, and go to state 33
    REALLIT  shift, and go to state 34
    INTLIT   shift, and go to state 35

    PrimaryExpr       go to state 36
    FunctionCallExpr  go to state 37
    UnaryExpr         go to state 76


State 32

   52 PrimaryExpr: ID .
   61 FunctionCallExpr: ID . LPAR ArgExpr RPAR
   62                 | ID . LPAR RPAR
   63                 | ID . LPAR error RPAR

    LPAR  shift, and go to state 77

    $default  reduce using rule 52 (PrimaryExpr)


State 33

   54 PrimaryExpr: CHRLIT .

    $default  reduce using rule 54 (PrimaryExpr)


State 34

   55 PrimaryExpr: REALLIT .
